Correct jumbotron text alignment

--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -44,6 +44,7 @@ p.lead.text-inverse > strong > a {
 .text-vcenter {
 	display: table-cell;
 	text-align: center;
+	vertical-align: middle;
 }
 
 .text-vcenter h1 {
